--- a/modules/ejb3/.settings/org.eclipse.wst.common.component
+++ b/modules/ejb3/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="ejb3">
         <wb-resource deploy-path="/" source-path="/src/main/resources" tag="defaultRootSource"/>
         <wb-resource deploy-path="/" source-path="/src/main/java"/>
+        <wb-resource deploy-path="/" source-path="/src/test/java"/>
         <property name="java-output-path" value="/ejb3/target/classes"/>
     </wb-module>
 </project-modules>
